--- a/ReleaseAssistant.csproj
+++ b/ReleaseAssistant.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
@@ -55,9 +56,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Mege.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseInformation.cs" />
+    <Compile Include="ReleaseInformationLoader.cs" />
     <Compile Include="XTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
