--- a/ReleaseAssistant.csproj
+++ b/ReleaseAssistant.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseInformation.cs" />
     <Compile Include="ReleaseInformationLoader.cs" />
+    <Compile Include="XMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="XMessageBox.Designer.cs">
+      <DependentUpon>XMessageBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="XTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -76,6 +82,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="XMessageBox.resx">
+      <DependentUpon>XMessageBox.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
