--- a/ReleaseAssistant/ReleaseAssistant.csproj
+++ b/ReleaseAssistant/ReleaseAssistant.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseInformation.cs" />
     <Compile Include="ReleaseInformationLoader.cs" />
+    <Compile Include="XButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="XMessageBox.cs">
       <SubType>Form</SubType>
     </Compile>
