--- a/ReleaseAssistant/ReleaseAssistant.csproj
+++ b/ReleaseAssistant/ReleaseAssistant.csproj
@@ -56,11 +56,8 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Mege.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReleaseInformation.cs" />
-    <Compile Include="ReleaseInformationLoader.cs" />
     <Compile Include="XButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -103,6 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app-icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ReleaseUtils\ReleaseUtils.csproj">
+      <Project>{8c9fbbb2-66f6-4401-943a-4f1926af842f}</Project>
+      <Name>ReleaseUtils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
